doc: Swagger file
